CORS: allow any origin by default in Docker (allowedOriginPatterns)
Accessing via subnet IP (192.168.x.x) or any non-localhost address
was blocked because Origin didn't match the hardcoded localhost URL.
Docker now sets CORS_ALLOWED_ORIGINS=* which uses allowedOriginPatterns,
compatible with credentials. Override in .env.docker to restrict.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>